* Fixed a non-virtualhost bug in "Mail to a friend"
* Added better logic to the forgot password page
* Fixed several bugs with the referer list in eZ stats.
* Fixed bug when using <file ID> and nVH setup.
* Articles no longer loose their placement when using the XMLRPC interface
* Fixed sorting of user list in admin area
* Added printing of articles for the root category in sitemap.

Changes from 2.2.5 to 2.2.6
---------------------------
* Forum messages doesn't show posting time when message is temporary.
* Fixed bug with clearing of cache when using nVH and site.ini.php file.
* Fixed bug with "goto" drop-down in article list admin.
* Fixed bug in redirect after cancel of category edit.
* Fixed correct redirection when already in SSL mode.
* Fixed correct mimetype on uppercase filenames.
* Fixed bug when adding image tag to non existant image.
* Fixed a bug in forgot password
* Group edit now only shows permissions from enabled modules.
* We don't print error messages if we have missing entries in site.ini and debugging is off.
* Fixed bug in eZ trade with options in confirmation mail.
* Fixed bug in statistics.
* Added workaround for Eudora e-mail.

Changes from 2.2.4 to 2.2.5
---------------------------
* Added article edit and image category to section charset override.
* Added support for sending over section information with article, image, article category and image category using XMLRPC.
* Fixed XMLRPC listings for articles to only show the articles which the user can read AND write.
* Sitewide language setting is now controlled by the Language key in group site, the old eZCalendarMain code is still present.
* Fixed problem where the session language setting was overriden by the section language.
* Added support for sending over the sitewide language and charset in xmlrpc interface.
* Fixed notification bug when articles got published from eZ publish DE.
* Fixed several permission bugs in eZ imagecatalogue.